Mon Mar 16 20:11:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RedirectionService/CCMObjectLocator.h:
          Made destructor virtual

        * DAnCE/tests/ObjectLocatorTest/ObjectLocatorTest.mpc:
        * DAnCE/tests/RedirectionServiceTest/DummyImpl.h:
          Layout changes

        * tests/Bug_2130_Regression/SEC_CheckPoint/TSEC_CheckPoint.mpc:
          Added naming

Sun Mar 15 19:28:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ciao_executor.mpb:
          Added ciao_container_base as base project, the generated svnt.h
          files includes the EC.h file which includes the Container_BaseC.h
          file.

Fri Mar 13 08:00:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Starter/Starter.mpc:
          Don't build with minimum corba

Wed Mar 11 18:54:54 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ciaoidldefaults.mpb:
          Added build_files as base project, that way also the mpc/mwc
          files are added to the generated solution. This way we see
          in the ms ide also for custom cidl projects the mpc files.
          Thanks to Adam Mitz for suggesting this solution

Wed Mar 11 12:40:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/XSCRT/Elements.hpp:
          Updated workaround for cb2009

Tue Mar 10 13:03:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Display/NavDisplayGUI_exec/RootPanel.cpp:
          Fixed compile warning

Tue Mar 10 11:39:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.h:
        * ciao/Servants/Servant_Impl_Utils_T.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
          Moved static methods to CIAO::Servant namespace to fix
          linker problems with the CB2009 compiler.

Tue Mar 10 11:01:08 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/TargetManager/TargetManager.mpc: